Tue Mar 27 14:50:00 UTC 2012  Simon Massey  <simon dot massey at prismtech dot com>

        * tao/Compression/Base_Compressor.cpp:
        * tao/Compression/Base_Compressor.h:
          compressor_factory_ should not be a var just a pointer. Each compressor is
          passed in the "this" pointer of the factory that created it (which holds
          each compressor that is created inside it in it's own var). When it comes
          to delete the factory, each compressor held within the factory will keep the
          factory reference count artificially high so it does not get deleted and
          so the compressors it holds are also not deleted. Basically the var creates a
          circular reference counted chain of objects. Now the compressors simply hold a
          pointer to the factory, when the factory is deleted, each contained compressor
          will also be deleted.

Tue Mar 27 13:17:00 UTC 2012  Simon Massey  <simon dot massey at prismtech dot com>

        * tao/ORB_Core.cpp:
          Release the compression_manager_ in TAO_ORB_Core::fini().
          
        * tao/Compression/Compression_Manager.cpp:
        * tao/Compression/Compression_Manager.h:
          Deletion bug-fixes.

Tue Mar 27 10:40:00 UTC 2012  Simon Massey  <simon dot massey at prismtech dot com>

        * tests/ZIOP/client.cpp:
          Wrong wide char string being compared should always be narrow char.

Mon Mar 26 22:20:14 UTC 2012  Trevor Fields  <fields_t@ociweb.com>

        * orbsvcs/tests/Notify/Basic/ExtendedFilter.h:
          Removed unnecessary pointers.

Mon Mar 26 13:11:00 UTC 2012  Simon Massey  <simon dot massey at prismtech dot com>

        * tests/ZIOP/client.cpp:
          Correct test 4 checks for compression being used. (Was hidden as the client
          was selecting the wrong compressor).

        * tao/ZIOP/ZIOP.cpp:
          Updated the debugging messages (Give compressor level found in each list
          with compressor name).
